--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/person-api
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: person123
   jpa:
